--- a/supabase-wrappers/Cargo.toml
+++ b/supabase-wrappers/Cargo.toml
@@ -22,6 +22,7 @@ pg_test = []
 
 [dependencies]
 pgrx = {version = "=0.9.8", default-features = false }
+thiserror = "1.0.48"
 tokio = { version = "1.24", features = ["rt"] }
 uuid = { version = "1.2.2" }
 supabase-wrappers-macros = { version = "0.1", path = "../supabase-wrappers-macros" }
