--- a/wrappers/Cargo.toml
+++ b/wrappers/Cargo.toml
@@ -1,37 +1,98 @@
 [package]
 name = "wrappers"
-version = "0.1.16"
+version = "0.1.17"
 edition = "2021"
 
 [lib]
 crate-type = ["cdylib"]
 
 [features]
-default = [ "cshim", "pg15" ]
-cshim = [ "pgrx/cshim" ]
-pg11 = ["pgrx/pg11", "pgrx-tests/pg11", "supabase-wrappers/pg11" ]
-pg12 = ["pgrx/pg12", "pgrx-tests/pg12", "supabase-wrappers/pg12" ]
-pg13 = ["pgrx/pg13", "pgrx-tests/pg13", "supabase-wrappers/pg13" ]
-pg14 = ["pgrx/pg14", "pgrx-tests/pg14", "supabase-wrappers/pg14" ]
-pg15 = ["pgrx/pg15", "pgrx-tests/pg15", "supabase-wrappers/pg15" ]
-pg16 = ["pgrx/pg16", "pgrx-tests/pg16", "supabase-wrappers/pg16" ]
+default = ["cshim", "pg15"]
+cshim = ["pgrx/cshim"]
+pg11 = ["pgrx/pg11", "pgrx-tests/pg11", "supabase-wrappers/pg11"]
+pg12 = ["pgrx/pg12", "pgrx-tests/pg12", "supabase-wrappers/pg12"]
+pg13 = ["pgrx/pg13", "pgrx-tests/pg13", "supabase-wrappers/pg13"]
+pg14 = ["pgrx/pg14", "pgrx-tests/pg14", "supabase-wrappers/pg14"]
+pg15 = ["pgrx/pg15", "pgrx-tests/pg15", "supabase-wrappers/pg15"]
+pg16 = ["pgrx/pg16", "pgrx-tests/pg16", "supabase-wrappers/pg16"]
 pg_test = []
 
 helloworld_fdw = []
-bigquery_fdw = ["gcp-bigquery-client", "serde_json", "serde", "wiremock", "futures", "yup-oauth2", "thiserror"]
-clickhouse_fdw = ["clickhouse-rs", "chrono", "chrono-tz", "regex", "thiserror"]
-stripe_fdw = ["reqwest", "reqwest-middleware", "reqwest-retry", "serde_json", "thiserror", "url"]
-firebase_fdw = ["reqwest", "reqwest-middleware", "reqwest-retry", "serde_json", "yup-oauth2", "regex", "thiserror"]
-s3_fdw = [
-    "reqwest", "reqwest-middleware", "reqwest-retry", "aws-config", "aws-sdk-s3", "aws-smithy-http", "aws-smithy-runtime-api",
-    "tokio", "tokio-util", "csv", "async-compression", "serde_json",
-    "http", "parquet", "futures", "arrow-array", "chrono", "thiserror"
+bigquery_fdw = [
+    "gcp-bigquery-client",
+    "serde_json",
+    "serde",
+    "wiremock",
+    "futures",
+    "yup-oauth2",
+    "thiserror",
 ]
-airtable_fdw = ["reqwest", "reqwest-middleware", "reqwest-retry", "serde_json", "serde", "url", "thiserror"]
-logflare_fdw = ["reqwest", "reqwest-middleware", "reqwest-retry", "serde_json", "thiserror", "url"]
+clickhouse_fdw = ["clickhouse-rs", "chrono", "chrono-tz", "regex", "thiserror"]
+stripe_fdw = [
+    "reqwest",
+    "reqwest-middleware",
+    "reqwest-retry",
+    "serde_json",
+    "thiserror",
+    "url",
+]
+firebase_fdw = [
+    "reqwest",
+    "reqwest-middleware",
+    "reqwest-retry",
+    "serde_json",
+    "yup-oauth2",
+    "regex",
+    "thiserror",
+]
+s3_fdw = [
+    "reqwest",
+    "reqwest-middleware",
+    "reqwest-retry",
+    "aws-config",
+    "aws-sdk-s3",
+    "aws-smithy-http",
+    "aws-smithy-runtime-api",
+    "tokio",
+    "tokio-util",
+    "csv",
+    "async-compression",
+    "serde_json",
+    "http",
+    "parquet",
+    "futures",
+    "arrow-array",
+    "chrono",
+    "thiserror",
+]
+airtable_fdw = [
+    "reqwest",
+    "reqwest-middleware",
+    "reqwest-retry",
+    "serde_json",
+    "serde",
+    "url",
+    "thiserror",
+]
+logflare_fdw = [
+    "reqwest",
+    "reqwest-middleware",
+    "reqwest-retry",
+    "serde_json",
+    "thiserror",
+    "url",
+]
 
 # Does not include helloworld_fdw because of its general uselessness
-all_fdws = ["airtable_fdw", "bigquery_fdw", "clickhouse_fdw", "stripe_fdw", "firebase_fdw", "s3_fdw", "logflare_fdw"]
+all_fdws = [
+    "airtable_fdw",
+    "bigquery_fdw",
+    "clickhouse_fdw",
+    "stripe_fdw",
+    "firebase_fdw",
+    "s3_fdw",
+    "logflare_fdw",
+]
 
 [dependencies]
 pgrx = { version = "=0.10.2" }
@@ -39,7 +100,9 @@ pgrx = { version = "=0.10.2" }
 supabase-wrappers = { path = "../supabase-wrappers", default-features = false }
 
 # for clickhouse_fdw
-clickhouse-rs = { git = "https://github.com/suharev7/clickhouse-rs", branch = "async-await", features = ["tls"], optional = true }
+clickhouse-rs = { git = "https://github.com/suharev7/clickhouse-rs", branch = "async-await", features = [
+    "tls",
+], optional = true }
 chrono = { version = "0.4", optional = true }
 chrono-tz = { version = "0.6", optional = true }
 
@@ -70,7 +133,13 @@ aws-smithy-runtime-api = { version = "0.56.1", optional = true }
 csv = { version = "1.2", optional = true }
 tokio = { version = "1", features = ["full"], optional = true }
 tokio-util = { version = "0.7", optional = true }
-async-compression = { version = "0.3.15", features = ["tokio", "bzip2", "gzip", "xz", "zlib"], optional = true }
+async-compression = { version = "0.3.15", features = [
+    "tokio",
+    "bzip2",
+    "gzip",
+    "xz",
+    "zlib",
+], optional = true }
 http = { version = "0.2", optional = true }
 parquet = { version = "41.0.0", features = ["async"], optional = true }
 arrow-array = { version = "41.0.0", optional = true }
