--- a/wrappers/.ci/docker-compose.yaml
+++ b/wrappers/.ci/docker-compose.yaml
@@ -37,18 +37,17 @@ services:
       retries: 20
       
   firebase:
-    image: andreysenov/firebase-tools:11.24.1-node-14-alpine
+    image: andreysenov/firebase-tools:12.9.1-node-18-slim
     container_name: firebase-wrapped
-    command: firebase emulators:start --project supa --only auth,firestore --import=/baseline-data
+    command: firebase emulators:start --project supa --only auth,firestore --import=/home/node/baseline-data
     volumes:
-      - ../dockerfiles/firebase/baseline-data:/baseline-data
-      - ../dockerfiles/firebase/firebase.json:/home/node/firebase.json
+      - ../dockerfiles/firebase:/home/node
     ports:
       - "4000:4000" # UI
       - "8080:8080" # Firestore
       - "9099:9099" # Auth
     healthcheck:
-      test: sleep 4 && wget --no-verbose --tries=1 --spider http://localhost:9099/ || exit 1
+      test: sleep 4 && (echo >/dev/tcp/127.0.0.1/9099) &>/dev/null || exit 1
       interval: 10s
       timeout: 5s
       retries: 30
