--- a/.github/workflows/coverage.yml
+++ b/.github/workflows/coverage.yml
@@ -26,6 +26,31 @@ jobs:
       - name: Install cargo-llvm-cov
         uses: taiki-e/install-action@cargo-llvm-cov
 
+      - run: |
+          sudo apt remove -y postgres*
+          sudo apt-get install -y wget gnupg
+          sudo sh -c 'echo "deb https://apt.postgresql.org/pub/repos/apt $(lsb_release -cs)-pgdg main" > /etc/apt/sources.list.d/pgdg.list'
+          wget --quiet -O - https://www.postgresql.org/media/keys/ACCC4CF8.asc | sudo apt-key add -
+          sudo apt-get update -y -qq --fix-missing
+          sudo apt-get install -y \
+            clang-10 \
+            llvm-10 \
+            clang \
+            gcc \
+            make \
+            build-essential \
+            libz-dev \
+            zlib1g-dev \
+            strace \
+            libssl-dev \
+            pkg-config \
+            postgresql-15 \
+            postgresql-server-dev-15
+          sudo chmod a+rwx `/usr/lib/postgresql/15/bin/pg_config --pkglibdir` `/usr/lib/postgresql/15/bin/pg_config --sharedir`/extension /var/run/postgresql/
+
+      - run: cargo install cargo-pgrx --version 0.12.7
+      - run: cargo pgrx init --pg15 /usr/lib/postgresql/15/bin/pg_config
+
       - name: Generate code coverage
         id: coverage
         run: |
