--- a/.github/workflows/test_supabase_wrappers.yml
+++ b/.github/workflows/test_supabase_wrappers.yml
@@ -8,7 +8,7 @@ on:
 jobs:
   test:
     name: Run supabase_wrappers tests
-    runs-on: ubuntu-latest
+    runs-on: ubuntu-24.04
 
     steps:
     - name: Checkout code
@@ -20,25 +20,25 @@ jobs:
 
     - run: |
         sudo apt remove -y postgres*
-        sudo apt-get install -y wget gnupg
-        sudo sh -c 'echo "deb https://apt.postgresql.org/pub/repos/apt $(lsb_release -cs)-pgdg main" > /etc/apt/sources.list.d/pgdg.list'
-        wget --quiet -O - https://www.postgresql.org/media/keys/ACCC4CF8.asc | sudo apt-key add -
+        sudo apt install -y postgresql-common
+        sudo /usr/share/postgresql-common/pgdg/apt.postgresql.org.sh -y
         sudo apt-get update -y -qq --fix-missing
         sudo apt-get install -y \
-          clang-10 \
-          llvm-10 \
-          clang \
-          gcc \
-          make \
           build-essential \
-          libz-dev \
+          libreadline-dev \
           zlib1g-dev \
-          strace \
+          flex \
+          bison \
+          libclang-dev \
+          libxml2-dev \
+          libxslt-dev \
           libssl-dev \
+          libxml2-utils \
+          xsltproc \
+          ccache \
           pkg-config \
           postgresql-15 \
           postgresql-server-dev-15
-        sudo chmod a+rwx `/usr/lib/postgresql/15/bin/pg_config --pkglibdir` `/usr/lib/postgresql/15/bin/pg_config --sharedir`/extension /var/run/postgresql/
 
     - run: cargo install cargo-pgrx --version 0.12.7
     - run: cargo pgrx init --pg15 /usr/lib/postgresql/15/bin/pg_config
