--- a/wrappers/Cargo.toml
+++ b/wrappers/Cargo.toml
@@ -14,6 +14,7 @@ path = "./src/bin/pgrx_embed.rs"
 [features]
 default = ["cshim", "pg15"]
 cshim = ["pgrx/cshim"]
+pg12 = ["pgrx/pg13", "pgrx-tests/pg12", "supabase-wrappers/pg12"]
 pg13 = ["pgrx/pg13", "pgrx-tests/pg13", "supabase-wrappers/pg13"]
 pg14 = ["pgrx/pg14", "pgrx-tests/pg14", "supabase-wrappers/pg14"]
 pg15 = ["pgrx/pg15", "pgrx-tests/pg15", "supabase-wrappers/pg15"]
