--- a/.github/workflows/test_supabase_wrappers.yml
+++ b/.github/workflows/test_supabase_wrappers.yml
@@ -49,6 +49,6 @@ jobs:
 
     - name: Run clippy
       run: |
-        cd supabase-wrappers && cargo clippy --all --tests --no-deps
+        cd supabase-wrappers && RUSTFLAGS="-D warnings" cargo clippy --all --tests --no-deps --features "pgrx_embed"
 
     - run: cd supabase-wrappers && cargo test
