--- a/wrappers/Cargo.toml
+++ b/wrappers/Cargo.toml
@@ -12,8 +12,7 @@ name = "pgrx_embed_wrappers"
 path = "./src/bin/pgrx_embed.rs"
 
 [features]
-default = ["cshim", "pg15"]
-cshim = ["pgrx/cshim"]
+default = ["pg15"]
 pg13 = ["pgrx/pg13", "pgrx-tests/pg13", "supabase-wrappers/pg13"]
 pg14 = ["pgrx/pg14", "pgrx-tests/pg14", "supabase-wrappers/pg14"]
 pg15 = ["pgrx/pg15", "pgrx-tests/pg15", "supabase-wrappers/pg15"]
@@ -160,7 +159,7 @@ all_fdws = [
 ]
 
 [dependencies]
-pgrx = { version = "=0.12.7" }
+pgrx = { version = "=0.12.9" }
 #supabase-wrappers = "0.1"
 supabase-wrappers = { path = "../supabase-wrappers", default-features = false }
 
@@ -245,4 +244,4 @@ thiserror = { version = "1.0.48", optional = true }
 anyhow  = { version = "1.0.81", optional = true }
 
 [dev-dependencies]
-pgrx-tests = "=0.12.7"
+pgrx-tests = "=0.12.9"
