--- a/.github/workflows/coverage.yml
+++ b/.github/workflows/coverage.yml
@@ -22,6 +22,9 @@ jobs:
         with:
           toolchain: 1.81.0
           components: llvm-tools-preview
+          default: true
+          override: true
+          components: rustfmt, clippy
 
       - name: Install cargo-llvm-cov
         uses: taiki-e/install-action@cargo-llvm-cov
