--- a/.github/workflows/test_supabase_wrappers.yml
+++ b/.github/workflows/test_supabase_wrappers.yml
@@ -17,6 +17,9 @@ jobs:
     - uses: actions-rs/toolchain@v1
       with:
         toolchain: 1.81.0
+        default: true
+        override: true
+        components: rustfmt, clippy
 
     - run: |
         sudo apt remove -y postgres*
