--- a/.github/workflows/test_wrappers.yml
+++ b/.github/workflows/test_wrappers.yml
@@ -24,6 +24,9 @@ jobs:
     - uses: actions-rs/toolchain@v1
       with:
         toolchain: 1.81.0
+        default: true
+        override: true
+        components: rustfmt, clippy
 
     - run: |
         sudo apt remove -y postgres*
@@ -79,6 +82,9 @@ jobs:
     - uses: actions-rs/toolchain@v1
       with:
         toolchain: 1.81.0
+        default: true
+        override: true
+        components: rustfmt, clippy
 
     - run: |
         sudo apt remove -y postgres*
