--- a/.github/workflows/coverage.yml
+++ b/.github/workflows/coverage.yml
@@ -21,10 +21,9 @@ jobs:
         uses: actions-rs/toolchain@v1
         with:
           toolchain: 1.81.0
-          components: llvm-tools-preview
+          components: llvm-tools-preview, rustfmt, clippy
           default: true
           override: true
-          components: rustfmt, clippy
 
       - name: Install cargo-llvm-cov
         uses: taiki-e/install-action@cargo-llvm-cov
