--- a/wrappers/.ci/docker-compose-native.yaml
+++ b/wrappers/.ci/docker-compose-native.yaml
@@ -30,8 +30,13 @@ services:
     ports:
       - "9000:9000" # native interface
       - "8123:8123" # http interface
+    environment:
+      CLICKHOUSE_DEFAULT_ACCESS_MANAGEMENT: 1
+      CLICKHOUSE_USER: default
+      CLICKHOUSE_PASSWORD: default
+      CLICKHOUSE_DB: default
     healthcheck:
-      test: sleep 4 && wget --no-verbose --tries=1 --spider http://localhost:8123/?query=SELECT%201 || exit 1
+      test: sleep 4 && wget --no-verbose --tries=1 --spider http://default:default@127.0.0.1:8123/?query=SELECT%201 || exit 1
       interval: 10s
       timeout: 5s
       retries: 20
