--- a/supabase-wrappers/Cargo.toml
+++ b/supabase-wrappers/Cargo.toml
@@ -11,7 +11,7 @@ categories = ["database"]
 keywords = ["database", "postgres", "postgresql", "extension"]
 
 [lints.rust]
-unexpected_cfgs = { level = "allow", check-cfg = ['cfg(pgrx_embed)'] }
+unexpected_cfgs = { level = "warn", check-cfg = ['cfg(pgrx_embed)'] }
 
 [features]
 default = ["pg15"]
