--- a/mkdocs.yaml
+++ b/mkdocs.yaml
@@ -33,6 +33,7 @@ nav:
           - Clerk: 'catalog/clerk.md'
           - Cloudflare D1: 'catalog/cfd1.md'
           - Notion: 'catalog/notion.md'
+          - Orb: 'catalog/orb.md'
           - Paddle: 'catalog/paddle.md'
           - Snowflake: 'catalog/snowflake.md'
     - Guides:
