--- a/.github/workflows/coverage.yml
+++ b/.github/workflows/coverage.yml
@@ -52,8 +52,6 @@ jobs:
 
       - run: cargo install cargo-pgrx --version 0.12.9
       - run: cargo pgrx init --pg15 /usr/lib/postgresql/15/bin/pg_config
-      - run: cargo install cargo-component --version 0.13.2
-      - run: rustup target add wasm32-unknown-unknown
 
       - name: Build Wasm FDWs
         run: |
@@ -70,6 +68,8 @@ jobs:
           cargo llvm-cov clean --workspace
           cargo pgrx test --features "native_fdws" --manifest-path wrappers/Cargo.toml pg15
           rm -rf ./target/debug
+          cargo install cargo-component --version 0.13.2
+          rustup target add wasm32-unknown-unknown
           cargo pgrx test --features "wasm_fdws" --manifest-path wrappers/Cargo.toml pg15
           cargo llvm-cov report --lcov --output-path lcov.info
 
