--- a/.github/workflows/coverage.yml
+++ b/.github/workflows/coverage.yml
@@ -48,6 +48,7 @@ jobs:
             pkg-config \
             postgresql-15 \
             postgresql-server-dev-15
+          sudo apt-get -y autoremove && sudo apt-get -y clean
           sudo chmod a+rwx `/usr/lib/postgresql/15/bin/pg_config --pkglibdir` `/usr/lib/postgresql/15/bin/pg_config --sharedir`/extension /var/run/postgresql/
 
       - run: cargo install cargo-pgrx --version 0.12.9
