--- a/Cargo.toml
+++ b/Cargo.toml
@@ -10,6 +10,7 @@ exclude = [
     "wasm-wrappers/fdw/cfd1_fdw",
     "wasm-wrappers/fdw/clerk_fdw",
     "wasm-wrappers/fdw/helloworld_fdw",
+    "wasm-wrappers/fdw/hubspot_fdw",
     "wasm-wrappers/fdw/notion_fdw",
     "wasm-wrappers/fdw/orb_fdw",
     "wasm-wrappers/fdw/paddle_fdw",
