--- a/mkdocs.yaml
+++ b/mkdocs.yaml
@@ -32,6 +32,7 @@ nav:
           - Calendly: 'catalog/calendly.md'
           - Clerk: 'catalog/clerk.md'
           - Cloudflare D1: 'catalog/cfd1.md'
+          - HubSpot: 'catalog/hubspot.md'
           - Notion: 'catalog/notion.md'
           - Orb: 'catalog/orb.md'
           - Paddle: 'catalog/paddle.md'
