--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -57,6 +57,7 @@ jobs:
           cd wrappers
 
           # Add postgres package repo and install requested postgres version
+          sudo apt update
           sudo apt remove -y postgres*
           sudo apt -y install curl ca-certificates build-essential pkg-config libssl-dev
           sudo install -d /usr/share/postgresql-common/pgdg
